@@ -1,11 +1,9 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="t" type="string" xsi:nil="true"/>
   <foreach var="t"  indexVar="j">
   <in><variableReference>subjectNo</variableReference></in>
-  <body><variable name="s" type="string" xsi:nil="true"/>
-    <foreach var="s"  indexVar="i">
+  <body><foreach var="s"  indexVar="i">
     <in><variableReference>trialTypes</variableReference></in>
     <body><assign>
        <arraySubscript>
