@@ -1,1 +1,1 @@
-foreach footype s in sa { echo(s); }
+foreach s in sa { echo(s); }
