@@ -7,7 +7,7 @@ type file {}
 }
 
 (file fa[]) echo_batch (string sa[]) {
-    foreach string s, i in sa {
+    foreach s, i in sa {
         fa[i] = echo(s);
     }
 }
